src/objects/sma__MAFolderPermission__c.object
<CustomObject>
    <fields>
        <fullName>sma__Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Folder Permissions</relationshipLabel>
        <relationshipName>MapAnything_Folder_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Modify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__SetPermissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Folder_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Folder Permission</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__Folder__c</columns>
        <columns>sma__User__c</columns>
        <columns>sma__ProfileId__c</columns>
        <columns>sma__Create__c</columns>
        <columns>sma__Modify__c</columns>
        <columns>sma__Delete__c</columns>
        <columns>sma__SetPermissions__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FP{00000000}</displayFormat>
        <label>Folder Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Folder Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>